--- a/index.html
+++ b/index.html
@@ -22,30 +22,33 @@
     <!-- Header Start -->
     <header>
         <nav class="topnav">
-            <a href="#">CONTACT</a>
-            <a href="#">PORTFOLIO</a>
-            <div class="dropdown">
-                <button class="dropbtn">DROPDOWN 
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
-            </div> 
-            <div class="dropdown">
-                <button class="dropbtn">SERVICES 
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
-            </div> 
+            <div class="logo"><a href="#">BERYLLIUM</a></div>
+            <div class="topnav_links">
+                <a href="#" class="active">HOME</a>
             <a href="#">ABOUT</a>
-            <a href="#" class="active">HOME</a>
+            <div class="dropdown">
+              <button class="dropbtn">SERVICES 
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div> 
+            <div class="dropdown">
+              <button class="dropbtn">DROPDOWN 
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div> 
+            <a href="#">PORTFOLIO</a>
+            <a href="#">CONTACT</a>
+            </div>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
           </nav>
         <nav class="sidebar close" id="sidebar">
