--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">Web Design</a>
+                <a href="#">eCommerce</a>
+                <a href="#">Branding</a>
+                <a href="#">API</a>
               </div>
             </div> 
             <div class="dropdown">
@@ -41,9 +42,10 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <a href="#">HTML5</a>
+                <a href="#">CSS3</a>
+                <a href="#">Sass</a>
+                <a href="#">jQuery</a>
               </div>
             </div> 
             <a href="#">PORTFOLIO</a>
