--- a/index.html
+++ b/index.html
@@ -294,6 +294,40 @@
                 <h2>Work</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.</p>
             </div>
+            <div class="custom_container">
+                <div class="work_cards">
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_1.jpg" alt="image">
+                        <h3>New York Arena</h3>
+                        <p>New York</p>
+                    </div>
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_2.jpg" alt="image">
+                        <h3>Eagle Park</h3>
+                        <p>London</p>
+                    </div>
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_3.jpg" alt="image">
+                        <h3>Nationals Park</h3>
+                        <p>Paris, france</p>
+                    </div>
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_1.jpg" alt="image">
+                        <h3>New York Arena</h3>
+                        <p>New York</p>
+                    </div>
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_2.jpg" alt="image">
+                        <h3>Eagle Park</h3>
+                        <p>London</p>
+                    </div>
+                    <div class="work_cards-item">
+                        <img src="https://demos.freehtml5.co/beryllium/images/img_3.jpg" alt="image">
+                        <h3>Nationals Park</h3>
+                        <p>Paris, france</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
