--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
-        <link rel="stylesheet" href="./assets/slick/slick.css">
-        <link rel="stylesheet" href="./assets/slick/slick-theme.css">
-        <script src="./assets/slick/slick.min.js" defer></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" defer></script>
+    <link rel="stylesheet" href="./assets/slick/slick.css">
+    <link rel="stylesheet" href="./assets/slick/slick-theme.css">
+    <script src="./assets/slick/slick.min.js" defer></script>
     <link rel="stylesheet" href="./assets/css/main.css">
     <script src="./assets/js/main.js" defer></script>
     <title>Beryllium - Free Website Template</title>
@@ -33,34 +33,34 @@
                 <div class="logo"><a href="#">BERYLLIUM</a></div>
                 <div class="topnav_links">
                     <a href="#" class="active">HOME</a>
-                <a href="#">ABOUT</a>
-                <div class="dropdown">
-                  <button class="dropbtn">SERVICES 
-                    <i class="fa fa-caret-down"></i>
-                  </button>
-                  <div class="dropdown-content">
-                    <a href="#">Web Design</a>
-                    <a href="#">eCommerce</a>
-                    <a href="#">Branding</a>
-                    <a href="#">API</a>
-                  </div>
-                </div> 
-                <div class="dropdown">
-                  <button class="dropbtn">DROPDOWN 
-                    <i class="fa fa-caret-down"></i>
-                  </button>
-                  <div class="dropdown-content">
-                    <a href="#">HTML5</a>
-                    <a href="#">CSS3</a>
-                    <a href="#">Sass</a>
-                    <a href="#">jQuery</a>
-                  </div>
-                </div> 
-                <a href="#">PORTFOLIO</a>
-                <a href="#">CONTACT</a>
+                    <a href="#">ABOUT</a>
+                    <div class="dropdown">
+                        <button class="dropbtn">SERVICES
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">Web Design</a>
+                            <a href="#">eCommerce</a>
+                            <a href="#">Branding</a>
+                            <a href="#">API</a>
+                        </div>
+                    </div>
+                    <div class="dropdown">
+                        <button class="dropbtn">DROPDOWN
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="#">HTML5</a>
+                            <a href="#">CSS3</a>
+                            <a href="#">Sass</a>
+                            <a href="#">jQuery</a>
+                        </div>
+                    </div>
+                    <a href="#">PORTFOLIO</a>
+                    <a href="#">CONTACT</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-              </nav>
+            </nav>
             <nav class="sidebar close" id="sidebar">
                 <div class="close_button">
                     <a href="javascript:void(0);" onclick="closeside()" class="close_linker"><i
@@ -286,13 +286,14 @@
                         <img src="https://demos.freehtml5.co/beryllium/images/slider_3.jpg" alt="image">
                         <h2>Architecture #1</h2>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
         <section id="work">
             <div class="work_title">
                 <h2>Work</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis,
+                    rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.</p>
             </div>
             <div class="custom_container">
                 <div class="work_cards">
@@ -325,6 +326,77 @@
                         <img src="https://demos.freehtml5.co/beryllium/images/img_3.jpg" alt="image">
                         <h3>Nationals Park</h3>
                         <p>Paris, france</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="News">
+            <div class="custom_container">
+                <div class="news_summary">
+                    <div class="news">
+                        <h2 class="news_title">News</h2>
+                        <div class="news-item">
+                            <a href="#">
+                                <h4>September 10, 2016</h4>
+                            </a>
+                            <a href="#">
+                                <h2>Manila Bridge Re-construction</h2>
+                            </a>
+                            <a href="#">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
+                                    urna sagittis, rhoncus euismod...</p>
+                            </a>
+                        </div>
+                        <div class="news-item">
+                            <a href="#">
+                                <h4>September 10, 2016</h4>
+                            </a>
+                            <a href="#">
+                                <h2>Manila Bridge Re-construction</h2>
+                            </a>
+                            <a href="#">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
+                                    urna sagittis, rhoncus euismod...</p>
+                            </a>
+                        </div>
+                        <div class="news-item">
+                            <a href="#">
+                                <h4>September 10, 2016</h4>
+                            </a>
+                            <a href="#">
+                                <h2>Manila Bridge Re-construction</h2>
+                            </a>
+                            <a href="#">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
+                                    urna sagittis, rhoncus euismod...</p>
+                            </a>
+                        </div>
+                        <button>More News</button>
+                    </div>
+                    <div class="testimonials">
+                        <h2>Testimonials</h2>
+                        <div class="testimonials-items">
+                            <h3>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
+                                urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.“</h3>
+                                <h5>— John Doe Dueller</h5>
+                        </div>
+                        <div class="testimonials-items">
+                            <h3>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
+                                urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.“</h3>
+                                <h5>— John Doe Dueller</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="features">
+            <div class="custom_container">
+                <div class="features">
+                    <div class="features-item">
+                        <i class="fa-solid fa-file-contract"></i>
+                        <h4>ARCHITECT</h4>
+                        <h5>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</h5>
+                        <a href="#">LEARN MORE</a>
                     </div>
                 </div>
             </div>
