--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
                         <div class="testimonials-items">
                             <h3>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
                                 urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.“</h3>
-                                <h5>— John Doe Dueller</h5>
+                            <h5>— John Doe Dueller</h5>
                         </div>
                         <div class="testimonials-items">
                             <h3>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et
                                 urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.“</h3>
-                                <h5>— John Doe Dueller</h5>
+                            <h5>— John Doe Dueller</h5>
                         </div>
                     </div>
                 </div>
@@ -393,15 +393,87 @@
             <div class="custom_container">
                 <div class="features">
                     <div class="features-item">
-                        <i class="fa-solid fa-file-contract"></i>
-                        <h4>ARCHITECT</h4>
-                        <h5>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</h5>
-                        <a href="#">LEARN MORE</a>
+                        <div class="features_icon">
+                            <i class="fa-solid fa-file-contract"></i>
+                        </div>
+                        <div class="features_text">
+                            <h4>ARCHITECT</h4>
+                            <h5>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</h5>
+                            <a href="#">LEARN MORE</a>
+                        </div>
+                    </div>
+                    <div class="features-item">
+                        <div class="features_icon">
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="features_text">
+                            <h4>PLANNING</h4>
+                            <h5>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</h5>
+                            <a href="#">LEARN MORE</a>
+                        </div>
+                    </div>
+                    <div class="features-item">
+                        <div class="features_icon">
+                            <i class="fa-solid fa-plug"></i>
+                        </div>
+                        <div class="features_text">
+                            <h4>PARKS & EVENTS</h4>
+                            <h5>Lorem ipsum dolor sit ameteista, consectetur adipiscing is not elitistaris.</h5>
+                            <a href="#">LEARN MORE</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="upper_footer">
+            <div class="custom_container">
+                <div class="footer_context">
+                    <div class="footer_summary">
+                        <h2>Beryllium</h2>
+                        <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis,
+                            rhoncus euismod.</h4>
+                    </div>
+                    <div class="footer_links">
+                        <h2>Links</h2>
+                        <ul>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">FEATURES</a></li>
+                            <li><a href="#">PRODUCTS</a></li>
+                            <li><a href="#">TESTIMONIAL</a></li>
+                            <li><a href="#">CONTACT</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer_work">
+                        <h2>Work</h2>
+                        <ul>
+                            <li><a href="#">NEW YORK ARENA</a></li>
+                            <li><a href="#">EAGLE PARK</a></li>
+                            <li><a href="#">NATIONALS PARK</a></li>
+                            <li><a href="#">MANILA PARK</a></li>
+                        </ul>
+                    </div>
+                    <form>
+                        <input type="text" placeholder="Email">
+                        <button>SEND</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="footer_below">
+            <div class="custom_container">
+                <div class="below_context">
+                    <div class="copyrigth">
+                        <p>© 2016 Free HTML5. All Rights Reserved.</p>
+                    </div>
+                    <div class="designed_by">
+                        <p>Designed by <span>muradabdullay3v</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
